# zed

./: Cargo.toml  README.md
assets/settings/: default.json
crates/open_editors_panel/: Cargo.toml
crates/open_editors_panel/src/: lib.rs  open_editors_panel.rs  open_editors_panel_settings.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: settings_content.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
